Add start of backup to crane env vars
This allows cranes to rotate backup targets based on day.